--- a/firstTest/pom.xml
+++ b/firstTest/pom.xml
@@ -44,6 +44,12 @@
       <version>7.0.0</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>18.0.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
